--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,23 @@
+body {
+  margin:0;
+  width:100%;
+  background-color:#CCDACC;
+  font-family:'Exo', sans-serif;
+}
+
+div.top {
+  width:100%;
+  background-color:#777;
+  padding-top:2em;
+  padding-bottom:.5em;
+  margin-bottom:1em;
+  -webkit-box-shadow: 0px 3px 3px 0px black
+}
+
+
+
+
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -10,4 +30,8 @@
  *
  *= require_self
  *= require_tree .
+
  */
+
+= require_self
+= require_tree .
