--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,26 +1,19 @@
 body {
   margin:0;
   width:100%;
-  background-color:#CCDACC;
+  background-color:#AA9;
   font-family:'Exo', sans-serif;
 }
 
 div.top {
   width:100%;
-  background-color:#777;
-  padding-top:2em;
+  background-color:#000;
   padding-bottom:.5em;
   margin-bottom:1em;
   -webkit-box-shadow: 0px 3px 3px 0px black
 }
 
 
-div.footer {
-  border:5px solid black;
-  background-color:#777;
-  height:3em;
-  width:100%;
-}
 
 
 /*
