--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -2,30 +2,63 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
-div.top {
-  width:100%;
-  background-color:#777;
-  padding-top:2em;
-  padding-bottom:.5em;
-  margin-bottom:1em;
-  -webkit-box-shadow: 0px 3px 3px 0px black
+// animation section
+.header {
+  -webkit-animation-duration: 1s;
+  -webkit-animation-name: pulse;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
 }
+ 
+@-webkit-keyframes pulse {
+  from {
+    text-shadow: 0px 0px 5px #bbb;
+  }
+ 
+  to {
+    text-shadow: 0px 0px 0px #bbb;
+  }
+}
+
+.header:hover {-webkit-animation-play-state: paused;}
+
+
+// end of animation section
+
+
 
 div.top span.header {
   padding-left:5%;
-  color:#ddd;
+  color:#AA0;
   font-size:2em;
   font-weight:bold;
 }
 
-div.top span.new {
+.top {
+  padding-top:1em;
+}
+
+.new {
+  padding-left:3em;
+}
+
+.new a {
+  font-size:1.5em;
+  font-weight:bold;
+  text-decoration:none;
+}
+
+.new a:link {color:#FAD052;}
+.new a:visited {color:#FAD052;}
+.new a:hover, h1.show_header { color:white; text-shadow:0px 0px 4px #AF0;}
+
+div.top sblack.new {
   padding-left:2em;
 }
 
 div.content { margin-left:5%; }
 div.content,div.headers,div.rows {
-  width:1350px;
+  min-width:960px;
   resize:none;
 }
 
@@ -38,8 +71,17 @@ div.rows {
 }
 
 .headers {
+  text-shadow: 0px 1px 1px #B3B3A1;
+  color: #6B6B60;
   font-weight:bold;
-  color:red;
+  //color:#000;
+  letter-spacing:2px;
+}
+
+.title {
+  font-weight:bold;
+  color:#FAD052;
+  text-shadow:0px 0px 3px #000;
 }
 
 div.hsub,div.sub {
@@ -65,4 +107,8 @@ div.hdate,div.date {
 div.hactions,div.actions {
   float:left;
   width:30%;
+}
+
+.show_margin {
+  margin-left:2em;
 }
