--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing entry</h1>
+<div class="show_margin">   
+<h1 class="show_header" >Editing entry</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @entry %> |
 <%= link_to 'Back', entries_path %>
+</div>
