--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New entry</h1>
+<div class="show_margin">
+<h1 class="show_header">New entry</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', entries_path %>
+</div>
