--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,6 +1,7 @@
 <title>DevDiary</title>
 
 <div class="top">
+  <%= image_tag "logo.png"%>
   <span class="header"> DevDiary</span>
   <span class="new"><%= link_to 'New Entry', new_entry_path %></span>
 </div>
